<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnCarsList"
        android:layout_width="263dp"
        android:layout_height="92dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="35dp"
        android:text="@string/btnCarList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="263dp"
        android:layout_height="92dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="225dp"
        android:text="@string/btnRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="263dp"
        android:layout_height="92dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="35dp"
        android:text="@string/btnExit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCarsList" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="156dp"
        android:layout_height="124dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="130dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/transito_istmina"
        tools:srcCompat="@drawable/transito_istmina" />

</androidx.constraintlayout.widget.ConstraintLayout>